<resources>
    <string name="app_name">Dự Án 1</string>
    <string name="google_maps_API_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAQJhZPW9tYFJNx1GWzky5n3wFgl3G7YnA</string>
    <string name="title_activity_dangnhap">Sign in</string>

    <!-- Strings related to login -->
    <string name="click">Chọn có để thoát!</string>
    <string name="yes">Có</string>
    <string name="no">Không</string>

    <string name="back">Bạn có muốn thoát không?</string>
    <string name="err">Không được để trống</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_taikhoan">Tài Khoản</string>
    <string name="prompt_matkhau">Mật Khẩu</string>
    <string name="action_dangnhap">Đăng Nhập</string>
    <string name="action_dangki">Đăng Kí</string>
    <string name="title_activity_san__pham">San_PhamActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_cuahang">Cửa Hàng</string>
    <string name="title_lienhe">Liên Hệ</string>
    <string name="title_baocao">Thống Kê</string>
    <string name="title_nhanvien">Nhân Viên</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chu Hiếu</string>
    <string name="nav_header_subtitle">Hieucvph06411@fpt.edu.vn</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
