<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitee"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".DangNhap_Activity">


    <ImageView
        android:layout_width="225dp"
        android:layout_height="224dp"
        android:layout_marginTop="38dp"
        android:src="@drawable/logo" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_taikhoan"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:fontFamily="@font/robotobold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_matkhau"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nhớ mật khẩu"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">
    <Button
        style="?android:textAppearanceSmall"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/action_dangki"
        android:textColor="@color/whitee"
        android:background="@drawable/mybutton"
        android:textStyle="bold" />

    <Button
        android:layout_gravity="right"
        android:background="@drawable/mybutton"
        style="?android:textAppearanceSmall"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:text="@string/action_dangnhap"
        android:textColor="@color/whitee"
        android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>